--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | IP Address Tracker</title>
+  <link href="dist/output.css" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>IP Address Tracker</title>
 </head>
-<body>
 
-  IP Address Tracker
+<body class="flex flex-col min-h-screen">
+  <main class="flex-1">
+    <div>
+      <h1>IP Address Checker</h1>
+    </div>
+    IP Address Tracker
 
-  Search for any IP address or domain
+    Search for any IP address or domain
 
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    IP Address
+    Location
+    Timezone
+      UTC <!-- add offset value dynamically using the API -->
+    ISP
+  </main>
+
+  <footer class="py-2 text-xs text-center">
+      <p>Challenge by <a class="underline" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by Kevin de Bie.</p>
+  </footer>
 </body>
 </html>
