--- a/index.html
+++ b/index.html
@@ -6,28 +6,59 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="dist/output.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 
   <title>IP Address Tracker</title>
 </head>
 
 <body class="flex flex-col min-h-screen">
+  <header class="flex flex-wrap justify-center min-h-[250px] bg-[url('/images/pattern-bg-desktop.png')] bg-cover bg-no-repeat">
+      <div class="container text-center pt-6">
+        <h1 class="mb-4 text-white">IP Address Checker</h1>
+        <form action=""
+              class="flex justify-center">
+          <input type="text"
+                 name="search"
+                 placeholder="Search for any IP address or domain"
+                 class="py-4 px-5 rounded-tl-lg rounded-bl-lg min-w-[500px]"
+          >
+          <button class="inline-flex items-center justify-center bg-dark-gray w-14 rounded-tr-lg rounded-br-lg">
+            <img src="images/icon-arrow.svg" alt="search">
+          </button>
+        </form>
+      </div>
+
+      <div class="container grid grid-cols-4 self-end bg-white py-8 rounded-lg translate-y-[50%] shadow-2xl divide-x">
+        <div class="px-8">
+          <p class="uppercase text-medium-gray font-bold text-sm tracking-[3px] mb-2">IP address</p>
+          <p id="ip" class="text-2xl font-medium"></p>
+        </div>
+        <div class="px-8">
+          <p class="uppercase text-medium-gray font-bold text-sm tracking-[3px] mb-2">Location</p>
+          <p id="location" class="text-2xl font-medium"></p>
+        </div>
+        <div class="px-8">
+          <p class="uppercase text-medium-gray font-bold text-sm tracking-[3px] mb-2">Timezone</p>
+          <p id="timezone" class="text-2xl font-medium"></p>
+        </div>
+        <div class="px-8">
+          <p class="uppercase text-medium-gray font-bold text-sm tracking-[3px] mb-2">ISP</p>
+          <p id="isp" class="text-2xl font-medium"></p>
+        </div>
+      </div>
+
+  </header>
+
   <main class="flex-1">
-    <div>
-      <h1>IP Address Checker</h1>
-    </div>
-    IP Address Tracker
 
-    Search for any IP address or domain
-
-    IP Address
-    Location
-    Timezone
-      UTC <!-- add offset value dynamically using the API -->
-    ISP
   </main>
 
   <footer class="py-2 text-xs text-center">
       <p>Challenge by <a class="underline" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by Kevin de Bie.</p>
   </footer>
+
+  <script src="src/main.js"></script>
 </body>
 </html>
