--- a/index.html
+++ b/index.html
@@ -9,37 +9,45 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+        integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+        crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+          integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+          crossorigin=""></script>
 
   <title>IP Address Tracker</title>
 </head>
 
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen" onload="defaultIp()">
   <header class="flex flex-wrap justify-center min-h-[250px] bg-[url('/images/pattern-bg-desktop.png')] bg-cover bg-no-repeat">
       <div class="container text-center pt-6">
         <h1 class="mb-4 text-white">IP Address Checker</h1>
-        <form action=""
-              class="flex justify-center">
+        <div class="flex justify-center">
           <input type="text"
                  name="search"
+                 id="search"
                  placeholder="Search for any IP address or domain"
-                 class="py-4 px-5 rounded-tl-lg rounded-bl-lg min-w-[500px]"
+                 class="py-4 px-5 rounded-tl-xl rounded-bl-xl min-w-[calc(100% - 3.5rem)] lg:min-w-[500px]"
           >
-          <button class="inline-flex items-center justify-center bg-dark-gray w-14 rounded-tr-lg rounded-br-lg">
+          <button id="searchSubmit"
+                  class="inline-flex items-center justify-center bg-dark-gray w-14 rounded-tr-xl rounded-br-xl"
+                  onclick="getInput()">
             <img src="images/icon-arrow.svg" alt="search">
           </button>
-        </form>
+        </div>
       </div>
 
-      <div class="container grid grid-cols-4 self-end bg-white py-8 rounded-lg translate-y-[50%] shadow-2xl divide-x">
-        <div class="px-8">
+      <div class="container grid grid-cols-1 divide-x self-end bg-white py-8 rounded-xl translate-y-[50%] shadow-2xl text-center relative z-10 md:grid-cols-2 md:text-left lg:grid-cols-4">
+        <div class="px-8 mb-6 lg:mb-0">
           <p class="uppercase text-medium-gray font-bold text-sm tracking-[3px] mb-2">IP address</p>
           <p id="ip" class="text-2xl font-medium"></p>
         </div>
-        <div class="px-8">
+        <div class="px-8 mb-6 lg:mb-0">
           <p class="uppercase text-medium-gray font-bold text-sm tracking-[3px] mb-2">Location</p>
           <p id="location" class="text-2xl font-medium"></p>
         </div>
-        <div class="px-8">
+        <div class="px-8 mb-6 lg:mb-0">
           <p class="uppercase text-medium-gray font-bold text-sm tracking-[3px] mb-2">Timezone</p>
           <p id="timezone" class="text-2xl font-medium"></p>
         </div>
@@ -51,8 +59,8 @@
 
   </header>
 
-  <main class="flex-1">
-
+  <main class="flex-1 relative">
+    <div id="map" class="bg-neutral-100 absolute w-full h-full z-0"></div>
   </main>
 
   <footer class="py-2 text-xs text-center">
