--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                  class="py-4 px-5 rounded-tl-xl rounded-bl-xl flex-1 text-sm md:text-base lg:max-w-[500px]"
           >
           <button id="searchSubmit"
-                  class="inline-flex items-center justify-center bg-dark-gray w-12 md:w-14 rounded-tr-xl rounded-br-xl"
+                  class="inline-flex items-center justify-center bg-dark-gray w-12 md:w-14 rounded-tr-xl rounded-br-xl duration-300 hover:bg-black"
                   onclick="getInput()">
             <img src="images/icon-arrow.svg" alt="search">
           </button>
@@ -41,19 +41,19 @@
       <div class="container grid grid-cols-1 divide-x self-end bg-white py-6 rounded-xl shadow-2xl text-center relative mt-8 z-10 md:py-8 md:-mt-20 md:translate-y-[50%] md:grid-cols-2 md:text-left lg:-mt-6 lg:grid-cols-4">
         <div class="px-8 mb-6 lg:mb-0">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">IP address</p>
-          <p id="ip" class="md:text-2xl font-medium"></p>
+          <p id="ip" class="font-medium break-words md:text-2xl "></p>
         </div>
         <div class="px-8 mb-6 lg:mb-0">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">Location</p>
-          <p id="location" class="md:text-2xl font-medium"></p>
+          <p id="location" class="font-medium break-words md:text-2xl "></p>
         </div>
-        <div class="px-8 mb-6 lg:mb-0">
+        <div class="px-8 mb-6 md:mb-0">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">Timezone</p>
-          <p id="timezone" class="md:text-2xl font-medium"></p>
+          <p id="timezone" class="font-medium break-words md:text-2xl "></p>
         </div>
         <div class="px-8">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">ISP</p>
-          <p id="isp" class="md:text-2xl font-medium"></p>
+          <p id="isp" class="font-medium break-words md:text-2xl "></p>
         </div>
       </div>
 
