Changed JS check + default node version (v16)

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
       <div class="container grid grid-cols-1 divide-x self-end bg-white py-6 rounded-xl shadow-2xl text-center relative mt-8 z-10 md:py-8 md:-mt-20 md:translate-y-[50%] md:grid-cols-2 md:text-left lg:-mt-6 lg:grid-cols-4">
         <div class="px-8 mb-6 lg:mb-0">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">IP address</p>
-          <p id="ip" class="font-medium break-words md:text-2xl "></p>
+          <p id="ip" class="font-medium break-words md:text-xl "></p>
         </div>
         <div class="px-8 mb-6 lg:mb-0">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">Location</p>
-          <p id="location" class="font-medium break-words md:text-2xl "></p>
+          <p id="location" class="font-medium break-words md:text-xl "></p>
         </div>
         <div class="px-8 mb-6 md:mb-0">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">Timezone</p>
-          <p id="timezone" class="font-medium break-words md:text-2xl "></p>
+          <p id="timezone" class="font-medium break-words md:text-xl "></p>
         </div>
         <div class="px-8">
           <p class="uppercase text-medium-gray font-bold text-[12px] leading-none md:text-sm tracking-[3px] mb-2">ISP</p>
-          <p id="isp" class="font-medium break-words md:text-2xl "></p>
+          <p id="isp" class="font-medium break-words md:text-xl "></p>
         </div>
       </div>
 
